--- a/CV.html
+++ b/CV.html
@@ -38,7 +38,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-2f5df379a58b258e96c21c0638c20c03.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-6bd9cfa162949bde0a231f530c97869d.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-7ad6542725e80d1433b1f8ee26c2a1fc.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -154,12 +154,31 @@ ul.task-list li input[type="checkbox"] {
     </nav>
 </header>
 <!-- content -->
-<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-full page-navbar">
+<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#education" id="toc-education" class="nav-link active" data-scroll-target="#education">Education</a></li>
+  <li><a href="#skills" id="toc-skills" class="nav-link" data-scroll-target="#skills">Skills</a></li>
+  <li><a href="#professional-experience" id="toc-professional-experience" class="nav-link" data-scroll-target="#professional-experience">Professional Experience</a></li>
+  <li><a href="#institute-for-urban-policy-research-utd" id="toc-institute-for-urban-policy-research-utd" class="nav-link" data-scroll-target="#institute-for-urban-policy-research-utd">Institute for Urban Policy Research (UTD)</a></li>
+  <li><a href="#nestlé-pakistan" id="toc-nestlé-pakistan" class="nav-link" data-scroll-target="#nestlé-pakistan">Nestlé Pakistan</a></li>
+  <li><a href="#punjab-commission-on-the-status-of-women" id="toc-punjab-commission-on-the-status-of-women" class="nav-link" data-scroll-target="#punjab-commission-on-the-status-of-women">Punjab Commission on the Status of Women</a>
+  <ul class="collapse">
+  <li><a href="#academic-project-experience" id="toc-academic-project-experience" class="nav-link" data-scroll-target="#academic-project-experience">Academic Project Experience</a></li>
+  <li><a href="#publications-research" id="toc-publications-research" class="nav-link" data-scroll-target="#publications-research">Publications &amp; Research</a></li>
+  <li><a href="#leadership-experience" id="toc-leadership-experience" class="nav-link" data-scroll-target="#leadership-experience">Leadership Experience</a></li>
+  <li><a href="#keywords" id="toc-keywords" class="nav-link" data-scroll-target="#keywords">Keywords</a></li>
+  </ul></li>
+  </ul>
+</nav>
+    </div>
 <!-- main -->
-<main class="content column-page" id="quarto-document-content">
+<main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
@@ -168,7 +187,7 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<div class="quarto-title-meta column-page">
+<div class="quarto-title-meta">
 
     
   
@@ -180,13 +199,11 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="eman-ajmal" class="level1">
-<h1>Eman Ajmal</h1>
-<p>Richardson, Texas 75080 · +1 (928) 846-7669<br>
-<a href="mailto:emanajmal01@gmail.com">emanajmal01@gmail.com</a> · <a href="https://www.linkedin.com/in/eman-ajmal/">LinkedIn</a> · <a href="https://tinyurl.com/55w66938">Portfolio</a></p>
+<p>Richardson, Texas 75080</p>
+<p><a href="https://tinyurl.com/55w66938">Portfolio</a></p>
 <hr>
-<section id="education" class="level2">
-<h2 class="anchored" data-anchor-id="education">Education</h2>
+<section id="education" class="level3">
+<h3 class="anchored" data-anchor-id="education">Education</h3>
 <p><strong>University of Texas at Dallas</strong> — <em>MS, Social Data Analytics and Research</em><br>
 GPA: 3.89 | <em>Expected December 2026</em></p>
 <p><strong>Forman Christian College</strong>, Lahore, Pakistan — <em>BS, Sociology (Minor in Education)</em><br>
@@ -195,8 +212,8 @@ GPA: 3.47 | <em>Graduated January 2024</em></p>
 <em>August 2022</em></p>
 <hr>
 </section>
-<section id="skills" class="level2">
-<h2 class="anchored" data-anchor-id="skills">Skills</h2>
+<section id="skills" class="level3">
+<h3 class="anchored" data-anchor-id="skills">Skills</h3>
 <ul>
 <li><strong>Research &amp; Data Analysis:</strong> Quantitative &amp; qualitative research, survey design, SPSS, R Studio, SQL, data visualization, reporting</li>
 <li><strong>Marketing Tools:</strong> Canva, Meta Ads, DV360, Google Ads, Keyword Analysis, Sprinklr</li>
@@ -205,41 +222,48 @@ GPA: 3.47 | <em>Graduated January 2024</em></p>
 </ul>
 <hr>
 </section>
-<section id="professional-experience" class="level2">
-<h2 class="anchored" data-anchor-id="professional-experience">Professional Experience</h2>
-<section id="institute-for-urban-policy-research-utd" class="level3">
-<h3 class="anchored" data-anchor-id="institute-for-urban-policy-research-utd">Institute for Urban Policy Research (UTD)</h3>
+<section id="professional-experience" class="level3">
+<h3 class="anchored" data-anchor-id="professional-experience">Professional Experience</h3>
+</section>
+<section id="institute-for-urban-policy-research-utd" class="level2">
+<h2 class="anchored" data-anchor-id="institute-for-urban-policy-research-utd">Institute for Urban Policy Research (UTD)</h2>
 <p><strong>Policy Research Analyst</strong><br>
-<em>May 2025 – Present | Richardson, TX</em> - Analyze socio-economic datasets and generate insights from state and nonprofit data sources. - Draft policy indicators and summaries for public-facing reports. - Collaborate with faculty to refine data visualizations for stakeholders.</p>
+<em>May 2025 – Present | Richardson, TX</em><br>
+- Analyze socio-economic datasets.<br>
+- Draft policy indicators and summaries using insights from state and nonprofit sources.<br>
+- Collaborate with faculty and research staff to refine data visualizations and narratives for public reporting.</p>
 </section>
-<section id="nestlé-pakistan" class="level3">
-<h3 class="anchored" data-anchor-id="nestlé-pakistan">Nestlé Pakistan</h3>
+<section id="nestlé-pakistan" class="level2">
+<h2 class="anchored" data-anchor-id="nestlé-pakistan">Nestlé Pakistan</h2>
 <p><strong>Lead Social Listening</strong><br>
-<em>April 2024 – September 2024 | Lahore, Pakistan</em> - Conducted sentiment and regression analysis using <strong>Sprinklr</strong> and <strong>SPSS</strong>, driving a 15% improvement in brand perception. - Streamlined content review workflows with real-time data, improving operational efficiency.</p>
+<em>April 2024 – September 2024 | Lahore, Pakistan</em><br>
+- Led sentiment/Regression analysis using Sprinklr &amp; SPSS to uncover key trends and improve brand perception by 15%.<br>
+- Streamlined the content review and feedback process by integrating real-time data, enhancing stakeholder collaboration and increasing operational efficiency.</p>
 </section>
-<section id="punjab-commission-on-the-status-of-women" class="level3">
-<h3 class="anchored" data-anchor-id="punjab-commission-on-the-status-of-women">Punjab Commission on the Status of Women</h3>
+<section id="punjab-commission-on-the-status-of-women" class="level2">
+<h2 class="anchored" data-anchor-id="punjab-commission-on-the-status-of-women">Punjab Commission on the Status of Women</h2>
 <p><strong>Research &amp; Development Intern</strong><br>
-<em>October 2023 – December 2023 | Lahore, Pakistan</em> - Conducted research for the <strong>Gender Parity Report 2022</strong>, analyzing gender equity trends across Punjab. - Developed evidence-based policy recommendations for gender equity improvements.</p>
+<em>October 2023 – December 2023 | Lahore, Pakistan</em><br>
+- Conducted qualitative and quantitative research for the Gender Parity Report 2022, analyzing large-scale datasets to identify trends in gender equity across Punjab.<br>
+- Collaborated with cross-functional teams to develop evidence-based policy recommendations aimed at improving gender parity and social outcomes.</p>
 <hr>
-</section>
-</section>
-<section id="academic-project-experience" class="level2">
-<h2 class="anchored" data-anchor-id="academic-project-experience">Academic Project Experience</h2>
+<section id="academic-project-experience" class="level3">
+<h3 class="anchored" data-anchor-id="academic-project-experience">Academic Project Experience</h3>
 <p><strong>Thesis – Legal Awareness Among Female University Students in Lahore</strong><br>
 <em>September 2023 – January 2024</em><br>
-- Surveyed 300+ participants to identify gaps in legal literacy. - Delivered data-driven recommendations that increased engagement with legal initiatives by 25%.</p>
+- Led a comprehensive research study on legal knowledge among female students by surveying over 300 participants, uncovering critical gaps in legal literacy and identifying key opportunities for academic empowerment.<br>
+- Developed and presented data-driven recommendations to academic stakeholders, driving a 25% increase in student engagement with legal literacy initiatives and demonstrating impactful leadership in addressing contemporary societal challenges.</p>
 <hr>
 </section>
-<section id="publications-research" class="level2">
-<h2 class="anchored" data-anchor-id="publications-research">Publications &amp; Research</h2>
+<section id="publications-research" class="level3">
+<h3 class="anchored" data-anchor-id="publications-research">Publications &amp; Research</h3>
 <p><strong>The Efficacy of Battering Intervention and Prevention Programs</strong><br>
 <em>Institute for Urban Policy Research (UTD), Texas Council on Family Violence — 2025</em><br>
-- Analyzed data for over 1,600 participants to assess program effectiveness. - Supported statewide policy recommendations to reduce domestic violence recidivism.</p>
+- <em>Contributed as Research Assistant on a statewide evaluation examining the impact of Battering Intervention and Prevention Programs (BIPPs) on reducing domestic violence recidivism across Texas. Analyzed program data and outcomes for over 1,600 participants, supporting evidence-based policy recommendations.</em></p>
 <hr>
 </section>
-<section id="leadership-experience" class="level2">
-<h2 class="anchored" data-anchor-id="leadership-experience">Leadership Experience</h2>
+<section id="leadership-experience" class="level3">
+<h3 class="anchored" data-anchor-id="leadership-experience">Leadership Experience</h3>
 <ul>
 <li><strong>International Center Global Ambassador (UTD)</strong> — Vice President<br>
 </li>
@@ -249,8 +273,8 @@ GPA: 3.47 | <em>Graduated January 2024</em></p>
 </ul>
 <hr>
 </section>
-<section id="keywords" class="level2">
-<h2 class="anchored" data-anchor-id="keywords">Keywords</h2>
+<section id="keywords" class="level3">
+<h3 class="anchored" data-anchor-id="keywords">Keywords</h3>
 <p>R Studio, SQL, SPSS, Sprinklr, Data Visualization, Policy Research, Public Reporting, Stakeholder Engagement</p>
 
 
