--- a/Assignment3.html
+++ b/Assignment3.html
@@ -92,6 +92,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./index.html"> 
 <span class="menu-text">Home</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./CV.html"> 
+<span class="menu-text">CV</span></a>
+  </li>  
   <li class="nav-item dropdown ">
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6354" role="link" data-bs-toggle="dropdown" aria-expanded="false">
  <span class="menu-text">EPPS 6354</span>
@@ -129,7 +133,7 @@ ul.task-list li input[type="checkbox"] {
     </a>
     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-menu-epps-6302">    
         <li>
-    <a class="dropdown-item" href="./EPPS6302_Assignment1.qmd">
+    <a class="dropdown-item" href="./EPPS6302_Assignment1.html">
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
         <li>
