--- a/EPPS6302_Assignment1.html
+++ b/EPPS6302_Assignment1.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>CV – Eman Ajmal</title>
+<title>epps6302_assignment1 – Eman Ajmal</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -93,7 +93,7 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="./CV.html" aria-current="page"> 
+    <a class="nav-link" href="./CV.html"> 
 <span class="menu-text">CV</span></a>
   </li>  
   <li class="nav-item dropdown ">
@@ -162,123 +162,77 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#education" id="toc-education" class="nav-link active" data-scroll-target="#education">Education</a></li>
-  <li><a href="#skills" id="toc-skills" class="nav-link" data-scroll-target="#skills">Skills</a></li>
-  <li><a href="#professional-experience" id="toc-professional-experience" class="nav-link" data-scroll-target="#professional-experience">Professional Experience</a>
+  <li><a href="#part-4-write-a-one-page-note-on-designing-your-website" id="toc-part-4-write-a-one-page-note-on-designing-your-website" class="nav-link active" data-scroll-target="#part-4-write-a-one-page-note-on-designing-your-website">Part 4 — Write a one page note on designing your website</a></li>
+  <li><a href="#podcast-review-episode-319-building-managing-human-agent-hybrid-teams" id="toc-podcast-review-episode-319-building-managing-human-agent-hybrid-teams" class="nav-link" data-scroll-target="#podcast-review-episode-319-building-managing-human-agent-hybrid-teams">Podcast Review: Episode 319 – Building &amp; Managing Human + Agent Hybrid Teams</a>
   <ul class="collapse">
-  <li><a href="#institute-for-urban-policy-research-utd" id="toc-institute-for-urban-policy-research-utd" class="nav-link" data-scroll-target="#institute-for-urban-policy-research-utd">Institute for Urban Policy Research (UTD)</a></li>
-  <li><a href="#nestlé-pakistan" id="toc-nestlé-pakistan" class="nav-link" data-scroll-target="#nestlé-pakistan">Nestlé Pakistan</a></li>
-  <li><a href="#punjab-commission-on-the-status-of-women" id="toc-punjab-commission-on-the-status-of-women" class="nav-link" data-scroll-target="#punjab-commission-on-the-status-of-women">Punjab Commission on the Status of Women</a></li>
+  <li><a href="#episode-overview" id="toc-episode-overview" class="nav-link" data-scroll-target="#episode-overview">Episode Overview</a></li>
+  <li><a href="#main-theme" id="toc-main-theme" class="nav-link" data-scroll-target="#main-theme">Main Theme</a></li>
+  <li><a href="#key-takeaways-insights" id="toc-key-takeaways-insights" class="nav-link" data-scroll-target="#key-takeaways-insights">Key Takeaways &amp; Insights</a>
+  <ul class="collapse">
+  <li><a href="#integration-strategy" id="toc-integration-strategy" class="nav-link" data-scroll-target="#integration-strategy">Integration Strategy</a></li>
+  <li><a href="#training-evaluation" id="toc-training-evaluation" class="nav-link" data-scroll-target="#training-evaluation">Training &amp; Evaluation</a></li>
+  <li><a href="#data-quality-governance" id="toc-data-quality-governance" class="nav-link" data-scroll-target="#data-quality-governance">Data Quality &amp; Governance</a></li>
+  <li><a href="#practical-use-cases" id="toc-practical-use-cases" class="nav-link" data-scroll-target="#practical-use-cases">Practical Use Cases</a></li>
   </ul></li>
-  <li><a href="#academic-project-experience" id="toc-academic-project-experience" class="nav-link" data-scroll-target="#academic-project-experience">Academic Project Experience</a></li>
-  <li><a href="#publications-research" id="toc-publications-research" class="nav-link" data-scroll-target="#publications-research">Publications &amp; Research</a></li>
-  <li><a href="#leadership-experience" id="toc-leadership-experience" class="nav-link" data-scroll-target="#leadership-experience">Leadership Experience</a></li>
-  <li><a href="#keywords" id="toc-keywords" class="nav-link" data-scroll-target="#keywords">Keywords</a></li>
+  <li><a href="#personal-reflection" id="toc-personal-reflection" class="nav-link" data-scroll-target="#personal-reflection">Personal Reflection</a></li>
+  <li><a href="#conclusion" id="toc-conclusion" class="nav-link" data-scroll-target="#conclusion">Conclusion</a></li>
+  </ul></li>
   </ul>
 </nav>
     </div>
 <!-- main -->
-<main class="content" id="quarto-document-content">
-
-<header id="title-block-header" class="quarto-title-block default">
-<div class="quarto-title">
-<h1 class="title">CV</h1>
-</div>
+<main class="content" id="quarto-document-content"><header id="title-block-header" class="quarto-title-block"></header>
 
 
 
-<div class="quarto-title-meta">
 
-    
-  
-    
-  </div>
-  
-
-
-</header>
-
-
-<p>Richardson, Texas 75080</p>
-<p><a href="https://tinyurl.com/55w66938">Portfolio</a></p>
-<hr>
-<section id="education" class="level1">
-<h1>Education</h1>
-<p><strong>University of Texas at Dallas</strong> — <em>MS, Social Data Analytics and Research</em><br>
-GPA: 3.89 | <em>Expected December 2026</em></p>
-<p><strong>Forman Christian College</strong>, Lahore, Pakistan — <em>BS, Sociology (Minor in Education)</em><br>
-GPA: 3.47 | <em>Graduated January 2024</em></p>
-<p><strong>Istanbul Aydun University</strong>, Istanbul, Turkey — <em>Digital Marketing, Delightful Summer Programme</em><br>
-<em>August 2022</em></p>
+<section id="part-4-write-a-one-page-note-on-designing-your-website" class="level1">
+<h1>Part 4 — Write a one page note on designing your website</h1>
+<p>I created my website using Quarto and GitHub Pages to share my assignments, CV, and projects. The layout is simple and professional, with a top navigation bar for easy access to pages like Home, CV, and course assignments. A right-side “On this page” panel helps visitors jump to sections quickly.</p>
+<p>The site uses the Cosmo theme for clean styling and responsive design. Content is written in Markdown within .qmd files, making it easy to update and maintain. Images and files are stored in organized folders and linked using relative paths. I render the site locally and push updates to GitHub, where it’s automatically deployed.</p>
+<p>My goal was to build a clear, functional, and easy-to-navigate portfolio that highlights my work while remaining simple to maintain and expand in the future.</p>
 <hr>
 </section>
-<section id="skills" class="level1">
-<h1>Skills</h1>
-<ul>
-<li><strong>Research &amp; Data Analysis:</strong> Quantitative &amp; qualitative research, survey design, SPSS, R Studio, SQL, data visualization, reporting</li>
-<li><strong>Marketing Tools:</strong> Canva, Meta Ads, DV360, Google Ads, Keyword Analysis, Sprinklr</li>
-<li><strong>Technical:</strong> Microsoft Office, Advanced Excel, SketchUp, Slack, Discord, Zoom</li>
-<li><strong>Soft Skills:</strong> Creativity, Adaptability, Communication, Problem Solving, Critical Thinking</li>
-</ul>
-<hr>
+<section id="podcast-review-episode-319-building-managing-human-agent-hybrid-teams" class="level1">
+<h1>Podcast Review: Episode 319 – Building &amp; Managing Human + Agent Hybrid Teams</h1>
+<section id="episode-overview" class="level2">
+<h2 class="anchored" data-anchor-id="episode-overview">Episode Overview</h2>
+<p>In this episode of Data Framed, hosts Adel Nehme and Richie Cotton welcome Karen Ng, Head of Product at HubSpot, to discuss the evolving landscape of team dynamics where humans and AI agents collaborate side by side. The conversation centers on practical strategies for integrating AI agents into workflows and optimizing team performance within this hybrid environment.</p>
 </section>
-<section id="professional-experience" class="level1">
-<h1>Professional Experience</h1>
-<section id="institute-for-urban-policy-research-utd" class="level2">
-<h2 class="anchored" data-anchor-id="institute-for-urban-policy-research-utd">Institute for Urban Policy Research (UTD)</h2>
-<p><strong>Policy Research Analyst</strong><br>
-<em>May 2025 – Present | Richardson, TX</em><br>
-- Analyze socio-economic datasets.<br>
-- Draft policy indicators and summaries using insights from state and nonprofit sources.<br>
-- Collaborate with faculty and research staff to refine data visualizations and narratives for public reporting.</p>
+<section id="main-theme" class="level2">
+<h2 class="anchored" data-anchor-id="main-theme">Main Theme</h2>
+<p>The central theme of the episode is the rise of human-plus-agent hybrid teams work environments in which AI systems share responsibilities with human workers. Karen Ng breaks down how organizations can effectively blend AI capabilities with human oversight, ensuring both productivity and ethical integrity.</p>
 </section>
-<section id="nestlé-pakistan" class="level2">
-<h2 class="anchored" data-anchor-id="nestlé-pakistan">Nestlé Pakistan</h2>
-<p><strong>Lead Social Listening</strong><br>
-<em>April 2024 – September 2024 | Lahore, Pakistan</em><br>
-- Led sentiment/Regression analysis using Sprinklr &amp; SPSS to uncover key trends and improve brand perception by 15%.<br>
-- Streamlined the content review and feedback process by integrating real-time data, enhancing stakeholder collaboration and increasing operational efficiency.</p>
+<section id="key-takeaways-insights" class="level2">
+<h2 class="anchored" data-anchor-id="key-takeaways-insights">Key Takeaways &amp; Insights</h2>
+<section id="integration-strategy" class="level3">
+<h3 class="anchored" data-anchor-id="integration-strategy">Integration Strategy</h3>
+<p>Hybrid teams succeed when roles are clearly defined, and AI systems are introduced where they augment not replace human judgment.</p>
 </section>
-<section id="punjab-commission-on-the-status-of-women" class="level2">
-<h2 class="anchored" data-anchor-id="punjab-commission-on-the-status-of-women">Punjab Commission on the Status of Women</h2>
-<p><strong>Research &amp; Development Intern</strong><br>
-<em>October 2023 – December 2023 | Lahore, Pakistan</em><br>
-- Conducted qualitative and quantitative research for the Gender Parity Report 2022, analyzing large-scale datasets to identify trends in gender equity across Punjab.<br>
-- Collaborated with cross-functional teams to develop evidence-based policy recommendations aimed at improving gender parity and social outcomes.</p>
-<hr>
+<section id="training-evaluation" class="level3">
+<h3 class="anchored" data-anchor-id="training-evaluation">Training &amp; Evaluation</h3>
+<p>Establishing best practices for training AI agents includes designing them for continuous learning and setting evaluation criteria aligned with team goals.</p>
+</section>
+<section id="data-quality-governance" class="level3">
+<h3 class="anchored" data-anchor-id="data-quality-governance">Data Quality &amp; Governance</h3>
+<p>A robust governance framework is crucial. AI agents must operate on accurate, reliable data while maintaining transparency and ethical standards.</p>
+</section>
+<section id="practical-use-cases" class="level3">
+<h3 class="anchored" data-anchor-id="practical-use-cases">Practical Use Cases</h3>
+<p>Industries like customer support, sales, and data processing have seen measurable benefits by integrating AI agents to handle recurring tasks freeing humans to focus on complex, strategic work.</p>
 </section>
 </section>
-<section id="academic-project-experience" class="level1">
-<h1>Academic Project Experience</h1>
-<p><strong>Thesis – Legal Awareness Among Female University Students in Lahore</strong><br>
-<em>September 2023 – January 2024</em><br>
-- Led a comprehensive research study on legal knowledge among female students by surveying over 300 participants, uncovering critical gaps in legal literacy and identifying key opportunities for academic empowerment.<br>
-- Developed and presented data-driven recommendations to academic stakeholders, driving a 25% increase in student engagement with legal literacy initiatives and demonstrating impactful leadership in addressing contemporary societal challenges.</p>
-<hr>
+<section id="personal-reflection" class="level2">
+<h2 class="anchored" data-anchor-id="personal-reflection">Personal Reflection</h2>
+<p>This episode offers a forward-looking lens into how AI is reshaping team workflows. Karen Ng’s insights are grounded in real-world applications; her role at HubSpot lends credibility and depth to the discussion. I appreciated the balanced approach highlighting AI’s strengths while acknowledging the importance of human judgment, governance, and alignment with ethical standards.</p>
+<p>I find the emphasis on governance particularly impactful. Too often, the conversation around AI overlooks the importance of data integrity and trust. This episode prompts listeners to think critically about implementing AI in a way that enhances not erodes team coherence and accountability.</p>
 </section>
-<section id="publications-research" class="level1">
-<h1>Publications &amp; Research</h1>
-<p><strong>The Efficacy of Battering Intervention and Prevention Programs</strong><br>
-<em>Institute for Urban Policy Research (UTD), Texas Council on Family Violence — 2025</em><br>
-- <em>Contributed as Research Assistant on a statewide evaluation examining the impact of Battering Intervention and Prevention Programs (BIPPs) on reducing domestic violence recidivism across Texas. Analyzed program data and outcomes for over 1,600 participants, supporting evidence-based policy recommendations.</em></p>
-<hr>
-</section>
-<section id="leadership-experience" class="level1">
-<h1>Leadership Experience</h1>
-<ul>
-<li><strong>International Center Global Ambassador (UTD)</strong> — Vice President<br>
-</li>
-<li><strong>Art Junction (FCCU)</strong> — Director PR<br>
-</li>
-<li><strong>Aghaaz (NGO)</strong> — Executive Council</li>
-</ul>
-<hr>
-</section>
-<section id="keywords" class="level1">
-<h1>Keywords</h1>
-<p>R Studio, SQL, SPSS, Sprinklr, Data Visualization, Policy Research, Public Reporting, Stakeholder Engagement</p>
+<section id="conclusion" class="level2">
+<h2 class="anchored" data-anchor-id="conclusion">Conclusion</h2>
+<p>Episode 319 of Data Framed delivers a timely and practical exploration of hybrid human-AI teamwork. It’s especially valuable for product managers, data team leaders, and anyone working at the intersection of AI and organizational design. Whether you’re exploring AI adoption or refining existing deployments, this episode offers a thoughtful roadmap for doing so responsibly and effectively.</p>
 
 
+</section>
 </section>
 
 </main> <!-- /main -->
