--- a/Assignment4.html
+++ b/Assignment4.html
@@ -133,7 +133,7 @@ ul.task-list li input[type="checkbox"] {
     </a>
     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-menu-epps-6302">    
         <li>
-    <a class="dropdown-item" href="./EPPS6302_Assignment1.qmd">
+    <a class="dropdown-item" href="./EPPS6302_Assignment1.html">
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
         <li>
